Remove the twitter access tokens

--- a/Twitter-data-analysis-Akhil-Pragallapati.ipynb
+++ b/Twitter-data-analysis-Akhil-Pragallapati.ipynb
@@ -80,10 +80,10 @@
     "    # See https://developer.twitter.com/docs/auth/oauth for more information \n",
     "    # on Twitter's OAuth implementation.\n",
     "    \n",
-    "    CONSUMER_KEY = 'iSup9jCLJ9IWN7YwXBQBiv07M' # my developer twitter API key\n",
-    "    CONSUMER_SECRET ='p8uCq4VGTD00LrWGeLEYVd9sz59caJEtmzY6ppsSaBcbx1P6xf' # my twitter API Key Secret \n",
-    "    OAUTH_TOKEN = '1420264351-z2jXoURtanZG09HIZL7oQdEIvmJtJ2ktGVvVcAM' # My twitter access token\n",
-    "    OAUTH_TOKEN_SECRET = '3LTU1djibdAVjUwJeQFAHlurpLAzClEGT09hjdzR9hVYL' # My twitter access token sercet key\n",
+    "    CONSUMER_KEY =  # my developer twitter API key\n",
+    "    CONSUMER_SECRET = # my twitter API Key Secret \n",
+    "    OAUTH_TOKEN =  # My twitter access token\n",
+    "    OAUTH_TOKEN_SECRET =  # My twitter access token sercet key\n",
     "    \n",
     "    auth = twitter.oauth.OAuth(OAUTH_TOKEN, OAUTH_TOKEN_SECRET,\n",
     "                               CONSUMER_KEY, CONSUMER_SECRET)\n",
